--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,17 @@
   }
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: 100vh;
+}
+
+
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ffffff;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
